--- a/webapp/main.sass
+++ b/webapp/main.sass
@@ -23,7 +23,7 @@ $sidebar-width: 250px
       margin-left: 1.25em
 
   #main
-    padding: 70px 1em 2em ($sidebar-width + 5px);
+    padding: 70px 1em 2em ($sidebar-width + 5px)
     min-height: calc(-#{$header-height} + 100vh)
 
     .error-message
@@ -32,7 +32,7 @@ $sidebar-width: 250px
       color: #f14668
       background-color: #fee
       padding: 0.5em
-      font-size: 0.875rem;
+      font-size: 0.875rem
 
   #main-sidebar
     padding: 2em 0.5em 0px
