--- a/webapp/main.sass
+++ b/webapp/main.sass
@@ -1,21 +1,21 @@
 @import "assets/bulma.min"
 
+html
+  overflow-y: auto
+
 $header-height: 64px
 $sidebar-width: 250px
+$edit-sidebar-width: 300px
 
 #app
-  min-width: 100vw
-  height: 100vh
-
-  .thoughts ul li
-    margin-bottom: 0.3em
+  display: grid
+  min-height: 100vh
+  grid-template-rows: $header-height auto
+  grid-template-columns: $sidebar-width auto $edit-sidebar-width
 
   #main-navbar
-    position: fixed
-    top: 0
-    left: 0
-    width: 100%
-    height: $header-height
+    grid-column-start: 1
+    grid-column-end: -1
     box-shadow: 0 0 5px rgba(0,0,0,0.3)
     .title, .subtitle
       margin: 0
@@ -23,8 +23,15 @@ $sidebar-width: 250px
       margin-left: 1.25em
 
   #main
-    padding: 70px 1em 2em ($sidebar-width + 5px)
-    min-height: calc(-#{$header-height} + 100vh)
+    grid-column-start: 2
+
+    .thoughts ul li
+      cursor: pointer
+      margin-bottom: 0.3em
+      padding-left: 0.5em
+      border-radius: 0.3em
+      &:hover
+        background: #eee
 
     .error-message
       border-radius: 0.3em
@@ -34,14 +41,24 @@ $sidebar-width: 250px
       padding: 0.5em
       font-size: 0.875rem
 
+  #edit-sidebar
+    grid-column-start: 3
+    border-left: 1px solid #ddd
+    padding: 0.5em
+
+    input
+      border: none
+      border-radius: 0
+      border-bottom: 1px solid transparent
+      box-shadow: none
+      padding: 0.2em 0
+
+      &:focus
+        border-bottom: 1px solid #ddd
+
   #main-sidebar
+    grid-column-start: 1
     padding: 2em 0.5em 0px
-    position: fixed
-    top: $header-height
-    left: 0
-    width: $sidebar-width
-    height: calc(-#{$header-height} + 100vh)
-    overflow: hidden
     border-right: 1px solid #ddd
 
     .menu-label
@@ -92,5 +109,5 @@ $sidebar-width: 250px
             margin-left: calc(-0.3em - 1px)
             margin-right: calc(-0.3em - 1px)
 
-  #main-sidebar, #main
+  #main-sidebar, #edit-sidebar, #main
     transition: all 0.2s ease-out 0s
